# the_social_network

./: .env  .gitignore  Cargo.toml  build.rs  config.dev.json  docker-compose.yml  init_db.sh  scylla.yaml  sqlx-data.json
config/: config.dev.json
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: friendships.rs  lib.rs  messages.rs  proto.rs  users.rs
crates/models/src/realtime/: channels.rs  codec.rs  mod.rs  parsing.rs  receivers.rs  senders.rs
crates/models/src/repository/: messages.rs  mod.rs  users.rs
crates/proto/: Cargo.toml  build.rs  thesocialnetwork.proto
crates/realtime/: Cargo.toml
crates/realtime/src/: channels.rs  codec.rs  lib.rs  receivers.rs  senders.rs
crates/repository/: Cargo.toml
crates/repository/src/: lib.rs  messages.rs  users.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs  messages.rs  users.rs
crates/stream_helpers/: Cargo.toml
crates/stream_helpers/src/: lib.rs
crates/task_manager/: Cargo.toml
crates/task_manager/src/: lib.rs
migration/init_dev/: friendships.sql  functions.cql  keyspace.cql  messages.cql  tweets.cql  users.sql
proto/: thesocialnetwork.proto
src/client/: cli.rs  client.rs  connector.rs
src/server/: api.rs  connections.rs  main.rs  server.rs  tsn.rs
src/server/api/: helpers.rs  mod.rs
