[package]
name = "the_social_network"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/server.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"
anyhow = "1.0.70"
dashmap = "5.4.0"
asking = "0.0.2"
tokio-stream = { version = "0.1.12", features=["sync"] }

[build-dependencies]
tonic-build = "0.8"
