[package]
name = "tsn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[dependencies]
# Main frameworks
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"
tokio-stream = { version = "0.1.12", features=["sync"] }

# Connections
uuid = "1.3.0"
scylla = "0.8.0"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres" ] }
once_cell = "1.17"

# Misc
anyhow = "1.0.70"
asking = "0.0.2"
dashmap = "5.4.0"
async-trait = "0.1.68"

# Project crates
config = { path = "./crates/config" }
proto = { path = "./crates/proto" }
models = { path = "./crates/models" }

[workspace]
members = [
    "crates/config",
    "crates/proto",
    "crates/models",
    "crates/stream_helpers",
]
