[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
async-nats = "0.29"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres" ] }
scylla = "0.8.0"