[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.3.0"
scylla = "0.8.0"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "offline" ] }

futures = "0.3"
anyhow = "1.0"
async-trait = "0.1.68"
chrono = "0.4"

# Realtime
proto = { path = "../proto" }
prost = "0.11"
async-nats = "0.29"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }