[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.3.0"
chrono = "0.4"
thiserror = "1.0.40"

proto = { path = "../proto", optional = true }
prost = { version = "0.11", optional = true }

sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "uuid" ], optional = true }

[features]
default = []
proto = ["dep:prost", "dep:proto"]
sqlx = ["dep:sqlx"]