[package]
name = "realtime"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.29"
prost = "0.11.8"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }