[package]
name = "realtime"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
proto = { path = "../proto" }
prost = "0.11"
async-nats = "0.29"
thiserror = "1.0.40"

models = { path = "../models", features = ["proto"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }