[package]
name = "repository"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.3.0"
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
scylla = "0.8.0"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "offline" ] }

models = { path = "../models" }