[package]
name = "services"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1.68"
chrono = "0.4"

models = { path = "../models" }
repository = { path = "../repository" }
realtime = { path = "../realtime" }