[package]
name = "stream_helpers"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.27", features = ["rt", "macros"] }