[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["sync", "rt"] }
futures = "0.3.25"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "time"] }
anyhow = "1.0.70"